added text within index view

--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Searches#index</h1>
-<p>Find me in app/views/searches/index.html.erb</p>
+<h1>FEED YO'SELF</h1>
+<p>CHECK OUT THIS MAP (IT'S HIDDEN)</p>
