--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,2 +1,3 @@
-<h1>FEED YO'SELF</h1>
-<p>CHECK OUT THIS MAP (IT'S HIDDEN)</p>
+<h1>Searches#index</h1>
+<p>Find me in app/views/searches/index.html.erb</p>
+<p>The joker was here fighting with you know who </p>
