--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,6 +1,22 @@
-<h1>FEED YO'SELF</h1>
-<p>CHECK OUT THIS MAP (IT'S HIDDEN)</p>
-<h2>Push it real good!</h2>
-<h3>HAPPY BIRTHDAY SOPHIE!!!!</h3>
-<p>The joker was here fighting with you know who </p>
+<div class = "search">
 
+	<form class="form-inline">
+	<div class="form-group">
+		<label class="cuisine">Cuisine:</label>
+		<input type="text" class="form-control" id="exampleInputName2" placeholder="enter your dish">
+	</div>
+	<div class="form-group">
+		<label class="location">Location:</label>
+		<input type="email" class="form-control" id="location" placeholder=" 90021 or Santa Monica">
+	</div>
+	<button type="submit" class="fa fa-location-arrow"></button>
+	<span></span>
+	<div class="form-group">
+		<label class="price">Price: $</label>
+		<input type="email" class="form-control" id="price" placeholder="10.50">
+	</div>
+	<button type="submit" class="btn btn-default">GET FED UP</button>
+</form>
+	<div class="map">
+	</div>
+</div>
