--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@ body {
 	width: 100%;
 	height: 100px;
 	margin: 0 auto;
-	margin-top: 2%; 
+	margin-top: 2%;
 }
 
 .fa-location-arrow{
@@ -33,7 +33,7 @@ body {
 
 
 
-.map {
+#map {
 	width: 50%;
 	height: 400px;
 	background-color: black;
@@ -56,9 +56,3 @@ hr{
 	border: 2px solid black;
 	width: 80%;
 }
-
-
-
-
-
-
