--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,5 +1,18 @@
 <div class = "search">
 
+<% search = Geocoder.search("829 broadway, santa monica") %>
+<!-- request.remote_ip -->
+<% latitude = search[0].latitude %>
+<% longitude = search[0].longitude %>
+<% zipcode = search[0].postal_code %>
+<% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&postal_code=#{zipcode}&category=restaurant&api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
+
+<% response["objects"].sample(1).each do |place| %>
+<% @placeLat = place["lat"]
+ @placeLong = place["long"] %>
+<% @restaurantName = place["name"].upcase %>
+<% end %>
+
 	<form class="form-inline">
 	<div class="form-group">
 		<label class="cuisine">Cuisine:</label>
@@ -17,6 +30,57 @@
 	</div>
 	<button type="submit" class="btn btn-default">GET FED UP</button>
 </form>
-	<div class="map">
+	<div id="map">
 	</div>
 </div>
+
+<!-- in-view JS to utilize ruby variables created to pull proper map -->
+
+<script type="text/javascript">
+
+	var myCenter = new google.maps.LatLng(<%= @placeLat %>,<%= @placeLong %>)
+	var myCenter2 = new google.maps.LatLng(<%= latitude %>,<%= longitude %>)
+
+	function initialize() {
+  	var bounds = new google.maps.LatLngBounds();
+
+  	var mapProperties = {
+  		center:new google.maps.LatLng(<%= @placeLat %>,<%= @placeLong %>),
+  		zoom: 12,
+  		mapTypeId: google.maps.MapTypeId.ROADMAP
+		};
+
+	var map=new google.maps.Map(document.getElementById("map"), mapProperties);
+
+	var marker=new google.maps.Marker({
+  	position:myCenter,
+  });
+
+	marker.setMap(map);
+
+	var marker2=new google.maps.Marker({
+	  position:myCenter2,
+	});
+
+	marker2.setMap(map);
+
+	bounds.extend(marker.position)
+	bounds.extend(marker2.position)
+
+	map.fitBounds(bounds)
+
+	var infowindow = new google.maps.InfoWindow({
+	  content:"YOU"
+	});
+
+	infowindow.open(map,marker2);
+
+	var infowindow = new google.maps.InfoWindow({
+	  content:"<%= @restaurantName %>"
+	});
+
+	infowindow.open(map,marker);
+}
+	google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
