--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "search">
 
-<% search = Geocoder.search("829 broadway, santa monica") %>
+<% search = Geocoder.search(request.remote_ip) %>
 <!-- request.remote_ip -->
 <% latitude = search[0].latitude %>
 <% longitude = search[0].longitude %>
