added _nav.html and render it on the app.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="title">
-<h1 >FEED YO'SELF</h1>
-<div></div>
-<hr>
+<div class = "navigation_bar">
+<%=render partial: 'layouts/nav'%>
+</div> 
 <%= yield %>
 
 </body>
