--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,59 +1,125 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.title {
-	text-align: center;
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+.navbar {
+        margin-bottom: 0px;
+    }
+
+
+$bgHighlight : #F6F6F6;
+$colDefault     : #585858;
+$colHighlight   : white;
+
+
+.navbar-default {
+    background-color: #E9E581;
+    border-color: #DFE2DB;
+    .navbar-brand {
+        color: $colDefault;
+        &:hover, &:focus { 
+            color: $colHighlight; }}
+    .navbar-text {
+        color: black; }
+    .navbar-nav {
+        > li {
+            > a {
+                color: $colDefault;
+                &:hover,  &:focus {
+                    color: $colHighlight; }}}
+        > .active {
+            > a, > a:hover, > a:focus {
+                color: $colHighlight;
+                background-color: $bgHighlight; }}
+        > .open {
+            > a, > a:hover, > a:focus {
+                color: $colHighlight;
+                background-color: $bgHighlight; }}}
+    .navbar-toggle {
+        border-color: $bgHighlight;
+        &:hover, &:focus {
+            background-color: #FFF056; }
+        .icon-bar {
+            background-color: $colDefault; }}
+    .navbar-collapse,
+    .navbar-form {
+        border-color: $colDefault; }
+    .navbar-link {
+        color: $colDefault;
+        &:hover {
+            color: $colHighlight; }}}
+
+
+@media (max-width: 767px) {
+    .navbar-default .navbar-nav .open .dropdown-menu {
+        > li > a {
+            color: $colDefault;
+            &:hover, &:focus {
+                color: $colHighlight; }}
+        > .active {
+            > a, > a:hover, > a:focus, {
+                color: $colHighlight;
+                background-color: $bgHighlight; }}}
 }
+
+
 body {
 	background-color: #FFF8F0;
+            position: relative;
 
 }
 
 .search {
 	width: 100%;
-	height: 200px;
+	height: 5%;
 	text-align: center;
+            margin-top: 5%;
+            display: inline-block;
 }
 
 .form-inline {
 	width: 100%;
 	height: 100px;
 	margin: 0 auto;
-	margin-top: 2%;
+	margin-top: 2%; 
+            padding-left: 10%;
+            padding-right: 10%;
 }
 
-.fa-location-arrow{
+/*.fa-location-arrow{
 	width: 32px;
 	height: 34px;
 	border-radius: 15%;
-	background-color: #90F090;
-	border: 2px solid #90F090;
+	background-color: #DE1B1B;
+	border: 2px solid #DE1B1B;
 	color: white;
+            margin-top: 2%;
+}*/
+
+.empty {
+       height: 50px;
+       width: 100%;
+       display: block;
 }
 
-
-
 #map {
-	width: 50%;
+	width: 80%;
 	height: 400px;
 	background-color: black;
 	margin: 0 auto;
+            padding-top: 5vw;
 	opacity: 0.6;
   	filter: alpha(opacity=60);
-	border-radius: 10px;
 }
 
 
 
 .btn-default {
-	background-color: #90F090;
-	border: 2px solid #90F090;
+	background-color: #D9853B;
+	border: 2px solid #D9853B;
 	height: 34px;
 
 	color: white;
-}
-
-hr{
-	border: 2px solid black;
-	width: 80%;
 }
