--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
-
 .navbar {
         margin-bottom: 0px;
     }
@@ -66,35 +63,35 @@ $colHighlight   : white;
 
 
 body {
-	background-color: #FFF8F0;
+    background-color: #FFF8F0;
             position: relative;
 
 }
 
 .search {
-	width: 100%;
-	height: 5%;
-	text-align: center;
-            margin-top: 5%;
+    width: 100%;
+    height: 5%;
+    text-align: center;
+            margin-top: 10%;
             display: inline-block;
 }
 
 .form-inline {
-	width: 100%;
-	height: 100px;
-	margin: 0 auto;
-	margin-top: 2%; 
+    width: 100%;
+    height: 100px;
+    margin: 0 auto;
+    margin-top: 2%; 
             padding-left: 10%;
             padding-right: 10%;
 }
 
 /*.fa-location-arrow{
-	width: 32px;
-	height: 34px;
-	border-radius: 15%;
-	background-color: #DE1B1B;
-	border: 2px solid #DE1B1B;
-	color: white;
+    width: 32px;
+    height: 34px;
+    border-radius: 15%;
+    background-color: #DE1B1B;
+    border: 2px solid #DE1B1B;
+    color: white;
             margin-top: 2%;
 }*/
 
@@ -103,23 +100,53 @@ body {
        width: 100%;
        display: block;
 }
-
+/*
 #map {
-	width: 80%;
-	height: 400px;
-	background-color: black;
-	margin: 0 auto;
+    width: 80%;
+    height: 400px;
+    background-color: black;
+    margin: 0 auto;
             padding-top: 5vw;
-	opacity: 0.6;
-  	filter: alpha(opacity=60);
-}
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+}*/
 
 
 
 .btn-default {
-	background-color: #D9853B;
-	border: 2px solid #D9853B;
-	height: 34px;
+    background-color: #D9853B;
+    border: 2px solid #D9853B;
+    height: 34px;
 
-	color: white;
+    color: white;
+}
+
+
+#rotating-item-wrapper {
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+        margin: 0 auto;
+
+     
+}
+
+
+.rotating-item {
+
+    width: 75%;
+    display: none;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+    margin: 0 auto;
+    list-style-type: none;
+}
+
+img {
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 5%;
+    border: 5px solid white;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
 }
