--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,101 +1,151 @@
-<div class = "search">
 
-<% search = Geocoder.search("829 broadway, santa monica") %>
-<!-- request.remote_ip -->
-<% latitude = search[0].latitude %>
-<% longitude = search[0].longitude %>
-<% zipcode = search[0].postal_code %>
-<% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&postal_code=#{zipcode}&category=restaurant&api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
+
+<div id ="demo">
+
+</div>
+
+<!-- setting latitude/longitude variables to be used in API call -->
+
+<% latitude = Search.last.latitude %>
+<% longitude = Search.last.longitude %>
+<% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&radius=2000&category=restaurant&api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
 
 <% response["objects"].sample(1).each do |place| %>
-<% @placeLat = place["lat"]
- @placeLong = place["long"] %>
-<% @restaurantName = place["name"].upcase %>
-<% end %>
-
-<%= form_for @search do %>
-  <%= label_tag :cusine, 'Cuisine:' %>
-  <%= text_field :cuisine %>
-  <%= label_tag :location, 'Location:' %>
-  <%= text_field :location %>
-  <%= label_tag :price, 'Price:' %>
-  <%= text_field :price %>
-  <%= submit_tag "GET FED UP" %>
+  <% @placeLat = place["lat"]
+  @placeLong = place["long"] %>
+  <% @restaurantName = place["name"].upcase %>
 <% end %>
 
 <div class = "search">
 
-<%= form_for @search, :html => {:class => "form-inline"} do |f| %>
-	<div class="form-group">
-		  <%= f.label :cuisine, 'Cuisine' %>
-		  <%= f.text_field :cuisine, class: "form-control", placeholder: "Food type" %>
-	</div>
-	<div class="form-group">
-		  <%= f.label :location, 'Location' %>
-		  <%= f.text_field :location, class: "form-control", placeholder: "City, Zipcode or Selection Your Current Location" %>
-<!-- 		<button type="submit" class="fa fa-location-arrow"></button>
- -->	</div>
-	<div class="form-group">
-		  <%= f.label :price, 'Price:' %> <strong>$</strong>
-		  <%= f.text_field :price, class: "form-control", placeholder: "10.50" %>
-	</div>
-	  <%= f.submit "GET FED UP", class: "btn btn-default" %>
-	
+  <form class="form-inline">
+    	<div class="form-group">
+    		<label class="cuisine">Cuisine:</label>
+    		<input type="text" class="form-control" id="exampleInputName2" placeholder="enter your dish">
+    	</div>
+  	<!-- <div class="form-group">
+  		<label class="location">Location:</label>
+  		<input type="email" class="form-control" id="location" placeholder=" 90021 or Santa Monica">
+  	</div> -->
+  	<!-- <button type="submit" class="fa fa-location-arrow"></button> -->
+    	<div class="form-group">
+    		<label class="price">Price: $</label>
+    		<input type="text" class="form-control" id="price" placeholder="10.50">
+    	</div>
+    	<button id="submit" type="button" class="btn btn-default">GET FED UP</button>
+    </form>
 
-<% end %>
 </div> <!-- closing .search div  -->
 
-<div class= "empty"></div> 
+<div class= "empty"></div>
+<div id="rotating-image">
+	<li class = "rotating-item"><%= image_tag "burger.jpg"%></li>
+	<li class = "rotating-item"><%= image_tag "chinese.jpg" %></li>
+	<li class = "rotating-item"><%= image_tag "pizza.jpg"%></li>
+	<li class = "rotating-item"><%= image_tag "ramen.jpg"%></li>
+	<li class = "rotating-item"><%= image_tag "roasted_chicken.jpg"%></li>
+	<li class = "rotating-item"><%= image_tag "salad.jpg"%></li>
+	<li class = "rotating-item"><%= image_tag "taco.jpg"%></li>
+ </div>
 
-<div id="map" class="img-responsive" alt="Responsive image"></div>
+<!-- <div id="map"></div> -->
 
 <!-- in-view JS to utilize ruby variables created to pull proper map -->
 
 <script type="text/javascript">
 
-	var myCenter = new google.maps.LatLng(<%= @placeLat %>,<%= @placeLong %>)
-	var myCenter2 = new google.maps.LatLng(<%= latitude %>,<%= longitude %>)
+  document.getElementById("submit").addEventListener('click', getLocation)
 
-	function initialize() {
-  	var bounds = new google.maps.LatLngBounds();
+  var x = document.getElementById("demo");
 
-  	var mapProperties = {
-  		center:new google.maps.LatLng(<%= @placeLat %>,<%= @placeLong %>),
-  		zoom: 12,
-  		mapTypeId: google.maps.MapTypeId.ROADMAP
-		};
+// function getLocation runs on button click determining if browser geolocation
+// is available
 
-	var map=new google.maps.Map(document.getElementById("map"), mapProperties);
+  function getLocation() {
 
-	var marker=new google.maps.Marker({
-  	position:myCenter,
-  });
+      if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(showPosition);
+      } else {
+          x.innerHTML = "Geolocation is not supported by this browser.";
+      }
+  }
 
-	marker.setMap(map);
+// if geolocation is available, runs showPosition function
 
-	var marker2=new google.maps.Marker({
-	  position:myCenter2,
-	});
+  function showPosition(position) {
 
-	marker2.setMap(map);
+// grabbing input values and location values to be used in ajax post for new search item
 
-	bounds.extend(marker.position)
-	bounds.extend(marker2.position)
+      var y = document.getElementById("price").value;
+      var z = document.getElementById("exampleInputName2").value;
+  		var longitude = position.coords.longitude
+  		var latitude = position.coords.latitude
 
-	map.fitBounds(bounds)
+      var bounds = new google.maps.LatLngBounds();
 
-	var infowindow = new google.maps.InfoWindow({
-	  content:"YOU"
-	});
+  		    var myCenter = new google.maps.LatLng(latitude,longitude);
+          var myCenter2 = new google.maps.LatLng(<%= @placeLat %>,<%= @placeLong %>)
 
-	infowindow.open(map,marker2);
+  		    var marker;
 
-	var infowindow = new google.maps.InfoWindow({
-	  content:"<%= @restaurantName %>"
-	});
+  		    var mapProp = {
+  		      center: myCenter,
+  		      zoom:12,
+  		      zoomControl:false,
+  		      panControl:false,
+  		      mapTypeId:google.maps.MapTypeId.ROAD
+  		    };
 
-	infowindow.open(map,marker);
+  		    var map = new google.maps.Map(document.getElementById("rotating-image"),mapProp);
+
+          var marker2=new google.maps.Marker({
+          	position:myCenter,
+          });
+
+        	marker2.setMap(map);
+
+  		    var marker = new google.maps.Marker({
+  		      position:myCenter2
+
+  		    });
+
+  		    marker.setMap(map);
+
+// extending the bounds of the map to show both current location and restaraunt
+
+          bounds.extend(marker.position)
+        	bounds.extend(marker2.position)
+
+        	map.fitBounds(bounds)
+
+  				var infowindow = new google.maps.InfoWindow({
+  				      content: "ITS YOU"
+  				    });
+
+  				    infowindow.open(map,marker2);
+
+          var infowindow = new google.maps.InfoWindow({
+            	  content:"<%= @restaurantName %>"
+            	});
+
+            	infowindow.open(map,marker);
+
+// finally calling ajax function to post data to new search object
+
+          ajax(y,z,latitude,longitude);
+  }
+
+// ajax function to post input data to new search object to be accessible by rails
+
+  function ajax(price,cuisine,lat,long){
+
+    $.ajax({
+      type: "POST",
+      url: "/searches",
+      dataType: 'json',
+      data: { search: {cuisine: cuisine, price: price, latitude: lat, longitude: long}},
+    });
+
 }
-	google.maps.event.addDomListener(window, 'load', initialize);
 
 </script>
