--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@ $colHighlight   : white;
     border-color: #DFE2DB;
     .navbar-brand {
         color: $colDefault;
-        &:hover, &:focus { 
+        &:hover, &:focus {
             color: $colHighlight; }}
     .navbar-text {
         color: black; }
@@ -80,7 +80,7 @@ body {
     width: 100%;
     height: 100px;
     margin: 0 auto;
-    margin-top: 2%; 
+    margin-top: 2%;
             padding-left: 10%;
             padding-right: 10%;
 }
@@ -128,7 +128,7 @@ body {
         position: relative;
         margin: 0 auto;
 
-     
+
 }
 
 
@@ -149,4 +149,10 @@ img {
     border: 5px solid white;
     opacity: 0.8;
     filter: alpha(opacity=80);
+}
+
+#map {
+  width: 700px;
+  height: 700px;
+  border-radius: 10px;
 }
