--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,15 @@
   <title>Feedyoself</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href="css/hover.css" rel="stylesheet" media="all">
   <%= csrf_meta_tags %>
 </head>
 <body>
 <div class = "navigation_bar">
 <%=render partial: 'layouts/nav'%>
-</div> 
+</div>
 <%= yield %>
 
 </body>
