--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,7 +106,7 @@ body {
     height: 400px;
     background-color: black;
     margin: 0 auto;
-            padding-top: 5vw;
+    padding-top: 5vw;
     opacity: 0.6;
     filter: alpha(opacity=60);
 }*/
@@ -125,21 +125,18 @@ body {
 #rotating-item-wrapper {
         width: 100%;
         margin: 0 auto;
-        position: relative;
-        margin: 0 auto;
+        position: absolute;   
 
 
 }
 
 
 .rotating-item {
-
-    width: 75%;
+    width: 65%;
     display: none;
-    opacity: 0.8;
-    filter: alpha(opacity=80);
     margin: 0 auto;
     list-style-type: none;
+    position: relative;
 }
 
 img {
@@ -152,6 +149,7 @@ img {
 }
 
 #map {
+ display: none;
   width: 700px;
   height: 700px;
   border-radius: 10px;
