--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,7 +125,7 @@ body {
 #rotating-item-wrapper {
         width: 100%;
         margin: 0 auto;
-        position: absolute;   
+        position: absolute;
 
 
 }
@@ -154,4 +154,13 @@ img {
   height: 700px;
   border-radius: 10px;
   margin: 0 auto;
+}
+#restaurantName {
+  display: none;
+}
+#latitude {
+  display: none;
+}
+#longitude {
+  display: none;
 }
