--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,24 +1,27 @@
 
 
 <div id ="demo">
-
 </div>
 
 <!-- setting latitude/longitude variables to be used in API call -->
-<span id="results">
-<% latitude = Search.last.latitude %>
-<% longitude = Search.last.longitude %>
-<% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&radius=2000&category=restaurant&api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
 
-<% response["objects"].sample(1).each do |place| %>
-  <%
-  @placeLat = place["lat"]
-  @placeLong = place["long"]
-  @placeZip = place["postal_code"]
-  %>
-  <% @menu = HTTParty.get"https://api.locu.com" + place["resource_uri"] + "?api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
-  <% @restaurantName = place["name"].upcase %>
-<% end %>
+  <% latitude = Search.last.latitude %>
+  <% longitude = Search.last.longitude %>
+  <% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&radius=2000&category=restaurant&api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
+
+  <% response["objects"].sample(1).each do |place| %>
+    <%
+    @placeLat = place["lat"]
+    @placeLong = place["long"]
+    @placeZip = place["postal_code"]
+    %>
+    <% @menu = HTTParty.get"https://api.locu.com" + place["resource_uri"] + "?api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
+    <% @restaurantName = place["name"].upcase %>
+  <% end %>
+
+<span id="results">
+<!-- hidden spans holding data to be accessed via map.js -->
+
   <span id="restaurantName">
     <%= @restaurantName %>
   </span>
@@ -32,24 +35,28 @@
     <%= @placeZip %>
   </span>
 
-<div class = "search">
   <% @possibleItems = [] %>
 
   <% @menu["objects"][0]["menus"][0]["sections"].each do |section| %>
 
+    <% section["subsections"][0]["contents"].each do |item| %>
 
-  <% section["subsections"][0]["contents"].each do |item| %>
-  <% if (item["price"].to_i < Search.last.price.to_i && item["price"].to_i > 0) %>
-    <% @possibleItems << {name: item["name"], price: item["price"]} %>
+      <% if (item["price"].to_i < Search.last.price.to_i && item["price"].to_i > 0) %>
+        <% @possibleItems << {name: item["name"], price: item["price"]} %>
+      <% end %>
+
     <% end %>
-  <% end %>
 
 <% end %>
+
 <%= @possibleItems %>
 <% @randomItem = @possibleItems.sample(1) %>
 <%= @randomItem %>
 <h2><%= @randomItem.first[:name] %> : <%= @randomItem.first[:price] %></h2>
+
 </span>
+
+<div class = "search">
   <form class="form-inline">
     	<div class="form-group">
     		<label class="cuisine">Cuisine:</label>
