--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -9,7 +9,11 @@
   <% latitude = Search.last.latitude %>
   <% longitude = Search.last.longitude %>
   <% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&radius=2000&category=restaurant&api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
+  <% @possibleItems = [] %>
 
+  <!-- Until there are possible items from particular restaurant lower than input count, look for another restaurant   -->  
+
+  <% until @possibleItems.length > 0 do %>
   <% response["objects"].sample(1).each do |place| %>
     <%
     @placeLat = place["lat"]
@@ -35,8 +39,6 @@
     <%= @placeZip %>
   </span>
 
-  <% @possibleItems = [] %>
-
   <% @menu["objects"][0]["menus"][0]["sections"].each do |section| %>
 
     <% section["subsections"][0]["contents"].each do |item| %>
@@ -49,17 +51,16 @@
 
 <% end %>
 
-<%= @possibleItems %>
+<% end %>
 <% @randomItem = @possibleItems.sample(1) %>
-<%= @randomItem %>
-<h2><%= @randomItem.first[:name] %> : <%= @randomItem.first[:price] %></h2>
+<h2 id="menuItem" style="display:none"><%= @randomItem.first[:name] %> : <%= @randomItem.first[:price] %></h2>
 
 </span>
 <div class = "search">
   <form class="form-inline">
     	<div class="form-group">
     		<label class="cuisine">Cuisine:</label>
-    		<input type="text" class="form-control" id="exampleInputName2" placeholder="enter your dish">
+    		<input type="text" class="form-control" id="exampleInputName2" placeholder="enter your dish" >
     	</div>
   	<!-- <div class="form-group">
   		<label class="location">Location:</label>
@@ -68,9 +69,9 @@
   	<!-- <button type="submit" class="fa fa-location-arrow"></button> -->
     	<div class="form-group">
     		<label class="price">Price: $</label>
-    		<input type="text" class="form-control" id="price" placeholder="10.50">
+    		<input type="text" class="form-control" id="price" placeholder="10.50" >
     	</div>
-    	<button id="submit" type="button" class="btn btn-default">GET FED UP</button>
+    	<a href="/searches/show"><button id="submit" type="button" class="btn btn-default">GET FED UP</button></a>
     </form>
 
 </div> <!-- closing .search div  -->
