--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -82,4 +82,19 @@
 <%= render "galleries" %>
 </div>
 
+<!-- bootstraping about page to popup  -->
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+       <div class = "about">
+        <%=render 'about'%></div>
+      </div><!-- closing about -->
+    </div><!-- closing modal-content class -->
+  </div><!-- closing model-dialog class -->
+</div><!-- closing model class -->
+
+
+
+
 <!-- <div id="map"></div> -->
