--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,15 +154,15 @@ img {
   border-radius: 10px;
   margin: 0 auto;
 }
-#restaurantName {
+.restaurantName {
   display: none;
 }
-#latitude {
+.latitude {
   display: none;
 }
-#longitude {
+.longitude {
   display: none;
 }
-#placeZip {
+.placeZip {
   display: none;
 }
