--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -59,7 +59,7 @@
     <%= @placeZip[i] %>
   </span>
 <% @randomItem << @possibleItems.sample(1) %>
-<h2 class="menuItem" style="display:none"><%= @randomItem[i].first[:name] %> : <%= @randomItem[i].first[:price] %></h2>
+<h2 class="menuItem" style="display:none"><%= @randomItem[i].first[:name] %> : $<%= @randomItem[i].first[:price] %></h2>
 <% end %>
 </span>
 <div class = "search">
