--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -7,6 +7,7 @@
 
   <% latitude = Search.last.latitude %>
   <% longitude = Search.last.longitude %>
+  <%# raise longitude.inspect %>
   <% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&radius=2000&category=restaurant&api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
 
   <% response["objects"].sample(1).each do |place| %>
