--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,13 +72,14 @@ body {
     width: 100%;
     height: 5%;
     text-align: center;
-            margin-top: 10%;
+            margin-top: 5%;
             display: inline-block;
+            margin-bottom: 10px;
 }
 
 .form-inline {
     width: 100%;
-    height: 100px;
+    height: 50px;
     margin: 0 auto;
     margin-top: 2%;
             padding-left: 10%;
@@ -162,7 +163,7 @@ img {
 .longitude {
   display: none;
 }
-.placeZip {
+.postalCode {
   display: none;
 }
 
@@ -216,4 +217,13 @@ hr {
 
 .img1 {
     width: 100%;
+}
+.more-items {
+  width: 33%;
+  background-color: white;
+  padding-bottom: 10px;
+  font-size: 10px;
+  display: inline-block;
+  margin-top: 50px;
+  text-align: center;
 }
