changed font for index.html.erb

--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<div id ="demo">
+<div class = "empty">
 </div>
 
 <div class = "search">
@@ -18,19 +18,18 @@
     		<label class="price">Price: $</label>
     		<input type="text" class="form-control" id="price" placeholder="10.50">
     	</div>
-    	<a href="/searches/show"><button id="submit" type="button" class="btn btn-default">GET FED UP</button></a>
+      <div class = "form-group">
+            <a href="/searches/show"><button id="submit" type="button" class="btn btn-default">GET FED UP</button></a>
+      </div>
+    	
     </form>
 
 </div> <!-- closing .search div  -->
 
-<div class= "empty"></div>
+<div class= "empty1"></div>
 <div class="images">
 <%= render "galleries" %>
 </div>
 
 
 
-
-
-
-<!-- <div id="map"></div> -->
