--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,19 +72,24 @@ body {
     width: 100%;
     height: 5%;
     text-align: center;
-            margin-top: 10%;
-            display: inline-block;
+    display: inline-block;
 }
 
 .form-inline {
     width: 100%;
-    height: 100px;
+    height: 200px;
     margin: 0 auto;
-    margin-top: 2%;
     padding-left: 10%;
     padding-right: 10%;
     color: #00688B;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    opacity: 1;
+    filter: alpha(opacity=60);
+    border-radius: 5px;
 }
+
+
 
 /*.fa-location-arrow{
     width: 32px;
@@ -93,33 +98,14 @@ body {
     background-color: #DE1B1B;
     border: 2px solid #DE1B1B;
     color: white;
-            margin-top: 2%;
+    margin-top: 2%;
 }*/
-
-.empty {
-       height: 50px;
-       width: 100%;
-       display: block;
-}
-/*
-#map {
-    width: 80%;
-    height: 400px;
-    background-color: black;
-    margin: 0 auto;
-    padding-top: 5vw;
-    opacity: 0.6;
-    filter: alpha(opacity=60);
-}*/
-
-
 
 .btn-default {
     background-color: #00688B;
     border-color: #00688B;
     height: 34px;
-
-    color: black;
+    color: white;
 }
 
 .btn-default:hover {
@@ -139,7 +125,7 @@ body {
 
 
 .rotating-item {
-    width: 65%;
+    width: 80%;
     display: none;
     margin: 0 auto;
     list-style-type: none;
@@ -154,11 +140,16 @@ img {
     filter: alpha(opacity=80);
 }
 
+.map-box {
+    width: 100%;
+}
+
 #map {
-  width: 700px;
-  height: 700px;
+  width: 80%;
+
   border-radius: 10px;
   margin: 5% auto;
+  padding-right: 2%;
 }
 .restaurantName {
   display: none;
@@ -227,4 +218,15 @@ hr {
 
 .close {
     color: white;
+}
+
+.empty {
+    margin: 3%;
+    width: 100%;
+    height: 50px;
+}
+
+.empty1 {
+     width: 100%;
+    height: 40px;
 }
