refactoring the show.html.erb codes, and set a height for map application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,13 +143,11 @@ img {
     filter: alpha(opacity=80);
 }
 
-.map-box {
-    width: 100%;
-}
+
 
 #map {
   width: 80%;
-
+  height: 700px;
   border-radius: 10px;
   margin: 5% auto;
   padding-right: 2%;
