added styling for more food option button

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -94,7 +94,9 @@
 
 </div> <!-- closing .search div  -->
 
-    <button id="more_items" type="button">MORE FOOD/DRINK OPTIONS</button><br>
+<div class = "more_options">
+    <button id="more_items" type="button" class = "btn btn-default">MORE FOOD/DRINK OPTIONS</button><br>
+</div>
 
 <div id="map"></div>
 
