--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,10 +146,10 @@ img {
 
 
 #map {
-  width: 80%;
-  height: 700px;
+  width: 90%;
+  height: 350px;
   border-radius: 10px;
-  margin: 5% auto;
+  margin: 2% auto;
   padding-right: 2%;
 }
 .restaurantName {
@@ -232,7 +232,7 @@ hr {
 
 
 .empty {
-    margin: 3%;
+    margin: 1%;
     width: 100%;
     height: 50px;
 }
@@ -240,4 +240,15 @@ hr {
 .empty1 {
      width: 100%;
     height: 40px;
+}
+
+.more_options {
+    width: 100%;
+    height: 50px;
+    margin-top: 5%;
+    text-align: center;
+}
+
+#more_items {
+    margin: 0 auto;
 }
