updated about page text color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,11 +181,11 @@ h3 {
 
 .title {
     text-align: center;
-    color: #E9E581;
+    color: #00688B;
 }
 
 .quote {
-    color: white;
+    color: grey;
 }
 
 .developer {
