--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li><a href="http://localhost:3000/">Home</a></li>
         <li><a href="#">Gallery</a></li>
-        <li><a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">About</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#about">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
