--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -3,31 +3,21 @@
 <div id ="demo">
 </div>
 
-<!-- setting latitude/longitude variables to be used in API call -->
-
 <span id="results">
-  <% latitude = Search.last.latitude %>
-  <% longitude = Search.last.longitude %>
-  <% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&radius=2000&category=restaurant&api_key=7a3583e12a33f7edc1b626c5fdbba42a266d11c4" %>
-  <% @placeLat = []
-    @placeLong = []
-    @placeZip = []
-    @restaurantName = []
-    @randomItem = []
-%>
+
  <!-- Until there are possible items from particular restaurant lower than input count, look for another restaurant   -->
 
-<% for i in 0..2 %>
-<% @possibleItems = [] %>
+ <% for i in 0..2 %>
+  <% @possibleItems = [] %>
   <% until @possibleItems.length > 0 do %>
-  <% response["objects"].sample(1).each do |place| %>
+    <% @response["objects"].sample(1).each do |place| %>
     <%
-    @placeLat << place["lat"]
-    @placeLong << place["long"]
-    @placeZip << place["postal_code"]
+      @placeLat << place["lat"]
+      @placeLong << place["long"]
+      @placeZip << place["postal_code"]
+      @restaurantName << place["name"].upcase
     %>
     <% @menu = HTTParty.get"https://api.locu.com" + place["resource_uri"] + "?api_key=7a3583e12a33f7edc1b626c5fdbba42a266d11c4" %>
-    <% @restaurantName << place["name"].upcase %>
   <% end %>
 
   <% @menu["objects"][0]["menus"][0]["sections"].each do |section| %>
@@ -40,35 +30,28 @@
 
     <% end %>
 
-<% end %>
+  <% end %>
 
 <% end %>
 
 <!-- hidden spans holding data to be accessed via map.js -->
 
-  <span class="restaurantName">
-    <%= @restaurantName[i] %>
+  <span class="restaurantName"><%= @restaurantName[i] %></span>
+  <span class="latitude"><%= @placeLat[i] %></span>
+  <span class="longitude"><%= @placeLong[i] %></span>
+  <span class="postalCode"><%= @placeZip[i] %></span>
+
+  <span class='more-items' style="display:none">
+    <h4><%= @restaurantName[i] %></h4>
+        <% @possibleItems.each do |item| %>
+          <%= item[:name] %> : $<%= item[:price] %><br>
+        <% end %>
   </span>
-  <span class="latitude">
-    <%= @placeLat[i] %>
-  </span>
-  <span class="longitude">
-    <%= @placeLong[i] %>
-  </span>
-  <span class="postalCode">
-    <%= @placeZip[i] %>
-  </span>
 
-
-
-      <span class='more-items' style="display:none"><h4><%= @restaurantName[i] %></h4>
-      <% @possibleItems.each do |item| %>
-      <%= item[:name] %> : $<%= item[:price] %><br>
-      <% end %></span>
-
-
-<% @randomItem << @possibleItems.sample(1) %>
-<h2 class="menuItem" style="display:none"><%= @randomItem[i].first[:name] %> : $<%= @randomItem[i].first[:price] %></h2>
+  <% @randomItem << @possibleItems.sample(1) %>
+  <h2 class="menuItem" style="display:none">
+    <%= @randomItem[i].first[:name] %> : $<%= @randomItem[i].first[:price] %>
+  </h2>
 
 <% end %>
 </span>
@@ -95,7 +78,7 @@
       <div class = "form-group">
             <a href="/searches/show"><button id="submit" type="button" class="btn btn-default">GET FED UP</button></a>
       </div>
-      
+
     </form>
 
 </div> <!-- closing .search div  -->
@@ -105,4 +88,3 @@
 </div>
 
 <div id="map"></div>
-
