--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,12 +146,14 @@ img {
 
 
 #map {
+  position: relative;
   width: 90%;
-  height: 350px;
+  padding-bottom: 90%;
   border-radius: 10px;
   margin: 2% auto;
   padding-right: 2%;
 }
+
 .restaurantName {
   display: none;
 }
@@ -216,15 +218,20 @@ hr {
 .img1 {
     width: 100%;
 }
-.more-items {
-  width: 33%;
-  background-color: white;
-  padding-bottom: 10px;
-  font-size: 10px;
-  display: inline-block;
-  margin-top: 50px;
+
+
+div.more-items {
+  margin: 15% auto;
+  font-size: 15px;
   text-align: center;
+  color: white;
+  border-radius: 5%;
+  width: 90%;
+
+
+
 }
+
 
 .close {
     color: white;
@@ -252,3 +259,18 @@ hr {
 #more_items {
     margin: 0 auto;
 }
+
+h5 {
+    color: #00688B;
+    background-color: white;
+    width: 100%;
+    height: 30px;
+    text-align: 0 auto;
+    padding-top: 5px;
+    border-radius: 5px;
+}
+
+/*.empty2 {
+    width: 100%;
+    height: 50px;
+}*/
