added dropdown menu for the more food option button, and add toggle to hide and display the search form

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -8,7 +8,7 @@
 <span id="results">
   <% latitude = Search.last.latitude %>
   <% longitude = Search.last.longitude %>
-  <% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&radius=2000&category=restaurant&api_key=7a3583e12a33f7edc1b626c5fdbba42a266d11c4" %>
+  <% response = HTTParty.get"https://api.locu.com/v1_0/venue/search/?location=#{latitude}%2C#{longitude}&has_menu=TRUE&radius=2000&category=restaurant&api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
   <% @placeLat = []
     @placeLong = []
     @placeZip = []
@@ -26,7 +26,7 @@
     @placeLong << place["long"]
     @placeZip << place["postal_code"]
     %>
-    <% @menu = HTTParty.get"https://api.locu.com" + place["resource_uri"] + "?api_key=7a3583e12a33f7edc1b626c5fdbba42a266d11c4" %>
+    <% @menu = HTTParty.get"https://api.locu.com" + place["resource_uri"] + "?api_key=43a26b029716119b7d3247daacc3a29ed3151656" %>
     <% @restaurantName << place["name"].upcase %>
   <% end %>
 
@@ -60,12 +60,14 @@
   </span>
 
    
-      <div class='more-items containter' style="display:none">
+      <div class='more-items containter' style= "display:none">
         <div class = "col-md-4">
-          <h5><%= @restaurantName[i] %></h4>
-          <% @possibleItems.each do |item| %>
-          <%= item[:name] %> : $<%= item[:price] %><br>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><button class = "btn btn-default"><%= @restaurantName[i] %> <span class="caret"></span></button></a>
+          <ul class="dropdown-menu"><% @possibleItems.each do |item| %>
+           <li class = "menu_item"><a><%= item[:name] %> : $<%= item[:price] %></a></li>
           <% end %>
+          </ul>
+          </div>
         </div>
       </div>
 
