--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -228,8 +228,6 @@ div.more-items {
   border-radius: 5%;
   width: 90%;
 
-
-
 }
 
 
@@ -260,14 +258,9 @@ div.more-items {
     margin: 0 auto;
 }
 
-h5 {
+.menu_item {
     color: #00688B;
-    background-color: white;
-    width: 100%;
-    height: 30px;
-    text-align: 0 auto;
-    padding-top: 5px;
-    border-radius: 5px;
+    text-align: center;
 }
 
 /*.empty2 {
