temporarily commenting out cuisine validation as its not creating search on ajax post due to it

--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -17,9 +17,13 @@
     		<input type="text" class="form-control" id="price" placeholder="10.50">
     	</div>
       <div class = "form-group">
-            <a href="/searches/show"><button id="submit" type="button" class="btn btn-default">GET FED UP</button></a>
+            <!-- <a href="/searches/show"> -->
+            <a href="/searches/show">
+              <button id="submit" type="button" class="btn btn-default">GET FED UP</button>
+            </a>
+              <!-- </a> -->
       </div>
-    	
+
     </form>
 
 </div> <!-- closing .search div  -->
@@ -28,6 +32,3 @@
 <div class="images">
 <%= render "galleries" %>
 </div>
-
-
-
