--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -3,28 +3,22 @@
 
 <div class = "search">
   <form class="form-inline">
-    	<div class="form-group">
-    		<label class="cuisine">Cuisine:</label>
-    		<input type="text" class="form-control" id="exampleInputName2" placeholder="enter your dish">
-    	</div>
-  	<!-- <div class="form-group">
-  		<label class="location">Location:</label>
-  		<input type="email" class="form-control" id="location" placeholder=" 90021 or Santa Monica">
-  	</div> -->
-  	<!-- <button type="submit" class="fa fa-location-arrow"></button> -->
-    	<div class="form-group">
-    		<label class="price">Price: $</label>
-    		<input type="text" class="form-control" id="price" placeholder="10.50">
-    	</div>
-      <div class = "form-group">
-            <!-- <a href="/searches/show"> -->
-            <a href="/searches/show">
-              <button id="submit" type="button" class="btn btn-default">GET FED UP</button>
-            </a>
-              <!-- </a> -->
-      </div>
+      <!-- <div class="form-group">
+        <label class="cuisine">Cuisine:</label>
+        <input type="text" class="form-control" id="exampleInputName2" placeholder="enter your dish">
+      </div> -->
+    <!-- <div class="form-group">
+      <label class="location">Location:</label>
+      <input type="email" class="form-control" id="location" placeholder=" 90021 or Santa Monica">
+    </div> -->
+    <!-- <button type="submit" class="fa fa-location-arrow"></button> -->
+     <div class="form-group">
+        <input type="text" class="form-control" id="price" placeholder="NAME YO PRICE $$">
+    
+      <button id="submit" type="button" class="btn btn-default">GET FED UP</button>
+      </div> <!-- close .form-group -->
 
-    </form>
+    </form> <!-- close .form-horizontal -->
 
 </div> <!-- closing .search div  -->
 
