--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -45,7 +45,7 @@
 
       <div class='more-items containter' style= "display:none">
         <div class = "col-md-4">
-          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @restaurantName[i] %> <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @restaurantName[i] %> <span class="fa fa-plus-square-o"></span></a>
           <ul class="dropdown-menu"><% @possibleItems.each do |item| %>
            <li class = "menu_item"><a><%= item[:name] %> : $<%= item[:price] %></a></li>
           <% end %>
@@ -68,26 +68,22 @@
 
 <div class = "search">
   <form class="form-inline">
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label class="cuisine">Cuisine:</label>
         <input type="text" class="form-control" id="exampleInputName2" placeholder="enter your dish">
-      </div>
+      </div> -->
     <!-- <div class="form-group">
       <label class="location">Location:</label>
       <input type="email" class="form-control" id="location" placeholder=" 90021 or Santa Monica">
     </div> -->
     <!-- <button type="submit" class="fa fa-location-arrow"></button> -->
-      <div class="form-group">
-        <label class="price">Price: $</label>
-        <input type="text" class="form-control" id="price" placeholder="10.50">
-      </div>
-      <div class = "form-group">
-            <a href="/searches/show">
-              <button id="submit" type="button" class="btn btn-default">GET FED UP</button>
-              </a>
-      </div>
+     <div class="form-group">
+        <input type="text" class="form-control" id="price" placeholder="NAME YO PRICE $$">
+    
+      <button id="submit" type="button" class="btn btn-default">GET FED UP</button>
+      </div> <!-- close .form-group -->
 
-    </form>
+    </form> <!-- close .form-horizontal -->
 
 </div> <!-- closing .search div  -->
 
