modified styles of map infowindow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -262,6 +262,13 @@ div.more-items {
     color: #00688B;
     text-align: center;
 }
+#mapWindow h5{
+  color: #B0E2FF;
+  font-size: 12px;
+}
+#mapWindow p{
+  font-size: 10px;
+}
 
 /*.empty2 {
     width: 100%;
