--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -13,8 +13,8 @@
     </div> -->
     <!-- <button type="submit" class="fa fa-location-arrow"></button> -->
      <div class="form-group">
-        <input type="text" class="form-control" id="price" placeholder="NAME YO PRICE $$">
-    
+        <input type="text" class="form-control" id="price" placeholder="NAME YO PRICE">
+
       <button id="submit" type="button" class="btn btn-default">GET FED UP</button>
       </div> <!-- close .form-group -->
 
