--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,9 +14,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="http://localhost:3000/" class="fa fa-home">Home</a></li>
-        <li><a href="#" class="fa fa-camera">Gallery</a></li>
-        <li><a href="#"  class="fa fa-users" data-toggle="modal" data-target="#about">About</a></li>
+        <li><a href="http://localhost:3000/" class="fa fa-home">home</a></li>
+        <li><a href="#" class="fa fa-camera">gallery</a></li>
+        <li><a href="#"  class="fa fa-users" data-toggle="modal" data-target="#about">about</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
