update about page for steve

--- a/app/views/searches/_about.html.erb
+++ b/app/views/searches/_about.html.erb
@@ -10,7 +10,7 @@
 	  	<div class="col-md-4 ">
 	  		<div class= "developer"><%= image_tag "steve.jpg", :class => "img1" %></div>
 	  		<h4 class="title">Steve Soter</h4>
-	  		<p class="quote">Hey, everyone!  Steve, my name is.  From the great state of michigan, I come. Although my state I still love, loving the sunshine state a whole lot more, I am.  Three children, I have, all of which I love almost the same. and my beautiful wife who inspires me everyday, I have.  Yeesssssss.</p>
+	  		<p class="quote">Hey, everyone!  Steve, my name is.  From the great state of michigan, I come. Although my state I still love, loving the sunshine state a whole lot more, I am.  Five children, I have, all of which I love almost the same. and my beautiful wife who inspires me everyday, I have.  Yeesssssss.</p>
 	  	</div>
 	  	<div class="col-md-4">
 	  		<div class= "developer"><%= image_tag "sophie.jpg", :class => "img1"%></div>
