--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -200,6 +200,12 @@ img {
 .postalCode {
   display: none;
 }
+.phoneNumber {
+  display: none;
+}
+.address {
+  display: none;
+}
 
 
 .modal-content {
