--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,13 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://localhost:3000/">FEED YO'SELF</a>
+      <a class="navbar-brand" href="/">FEED YO'SELF</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="http://localhost:3000/" class="fa fa-home">home</a></li>
+        <li><a href="/" class="fa fa-home">home</a></li>
         <li><a href="#" class="fa fa-camera">gallery</a></li>
         <li><a href="#"  class="fa fa-users" data-toggle="modal" data-target="#about">about</a></li>
       </ul>
