--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,5 +29,10 @@
 </div><!-- closing model class -->
 <%= yield %>
 
+<footer>
+  <%= render partial: 'layouts/footer' %>
+</footer>
+
+
 </body>
 </html>
