--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/" class="fa fa-home">home</a></li>
         <li><a href="#" class="fa fa-camera">gallery</a></li>
-        <li><a href="#"  class="fa fa-users" data-toggle="modal" data-target="#about">about</a></li>
+        <li><a class="fa fa-users" data-toggle="modal" data-target="#about">about</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
