--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -301,8 +301,22 @@ div.more-items {
   font-size: 10px;
 }
 
+#submit input {
+  border-radius: 10px;
+  display: inline-block;
+  height: 100px;
+  width: 250px;
+  font-size: 29px;
+  text-align: center;
+  margin: 5px auto;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  background-color: #00688B;
+  color: white;
+  margin: 0 auto;
+}
+
 /*.empty2 {
     width: 100%;
     height: 50px;
 }*/
-
