added validation to input field to alert user if thy don't input a string

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -305,7 +305,10 @@ a.dropdown-toggle {
 #mapWindow p{
   font-size: 10px;
 }
-
+.error {
+  color: white;
+  font-size: 16px;
+}
 FOOTER {
     width: 80%;
     margin: 0 auto;
