--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -78,7 +78,7 @@
       </div> <!-- close .form-group -->
 
     </form> <!-- close .form-horizontal -->
-
+    <span class="error"></span>
 </div> <!-- closing .search div  -->
 
 <div class = "more_options">
