--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -19,6 +19,7 @@
       </div> <!-- close .form-group -->
 
     </form> <!-- close .form-horizontal -->
+    <span class="error"></span>
 
 </div> <!-- closing .search div  -->
 
