created twitter page and linked to it from footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -310,7 +310,8 @@ a.dropdown-toggle {
   font-size: 16px;
 }
 FOOTER {
-    width: 80%;
+    width: 100%;
+    text-align: center;
     margin: 0 auto;
     margin-top: 10%;
 
